@@ -7,7 +7,7 @@ namespace Qyoto {
 
 	/// See <see cref="IQApplicationSignals"></see> for signals emitted by QApplication
 	[SmokeClass("QApplication")]
-	public class QApplication : QCoreApplication, IDisposable {
+	public partial class QApplication : QCoreApplication, IDisposable {
  		protected QApplication(Type dummy) : base((Type) null) {}
 		interface IQApplicationProxy {
 			string Tr(string s, string c);
@@ -455,55 +455,6 @@ namespace Qyoto {
 		[SmokeMethod("~QApplication()")]
 		private void DisposeQApplication() {
 			ProxyQApplication().DisposeQApplication();
-		}
-		public QApplication(string[] argv) : this((Type) null) {
-			Qyoto.Init_qyoto();
-			CreateProxy();
-			Qt.qApp = this;
-      
-			string[] args = new string[argv.Length + 1];
-			args[0] = System.Reflection.Assembly.GetExecutingAssembly().Location;
-			argv.CopyTo(args, 1);
-
-			NewQApplication(args.Length, args);
-		}
-
-		[SmokeMethod("QApplication(int&, char**)")]
-		private void NewQApplication(int argc, string[] argv) {
-			ProxyQApplication().NewQApplication(argc, argv);
-		}
-
-		public QApplication(string[] argv, bool GUIenabled) : this((Type) null) {
-			Qyoto.Init_qyoto();
-			CreateProxy();
-			Qt.qApp = this;
-			
-			string[] args = new string[argv.Length + 1];
-			args[0] = System.Reflection.Assembly.GetExecutingAssembly().Location;
-			argv.CopyTo(args, 1);
-
-			NewQApplication(argv.Length, argv,GUIenabled);
-		}
-		
-		[SmokeMethod("QApplication(int&, char**, bool)")]
-		private void NewQApplication(int argc, string[] argv, bool GUIenabled) {
-			ProxyQApplication().NewQApplication(argc, argv,GUIenabled);
-		}
-    
-		public QApplication(string[] argv, QApplication.E_Type arg3) : this((Type) null) {
-			Qyoto.Init_qyoto();
-			CreateProxy();
-			Qt.qApp = this;
-			
-			string[] args = new string[argv.Length + 1];
-			args[0] = System.Reflection.Assembly.GetExecutingAssembly().Location;
-			argv.CopyTo(args, 1);
-
-			NewQApplication(argv.Length, argv,arg3);
-		}   
-		[SmokeMethod("QApplication(int&, char**, QApplication::Type)")]
-		private void NewQApplication(int argc, string[] argv, QApplication.E_Type arg3) {
-			ProxyQApplication().NewQApplication(argc, argv,arg3);
 		}
 		protected new IQApplicationSignals Emit() {
 			return (IQApplicationSignals) Q_EMIT;
